--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>WORDLE</title>
     <style>
         div, h1, span, p {
-            font-family: 'Segoe UI', Tahoma , Geneva, Verdana, sans-serif;
+            font-family: 'Comic Sans', Tahoma , Geneva, Verdana, sans-serif;
         }
 		
 		header {
@@ -18,7 +18,7 @@
 			font-family: Arial, Helvetica, sans-serif;
             display: flex;
             flex-direction: column;
-            background-color: white;
+            background-image: url('wallapaper.jpg');
 			margin: 0;
         }
 
