--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			font-family: Arial, Helvetica, sans-serif;
             display: flex;
             flex-direction: column;
-            background-image: url('shark.jpg');
+            background-image: url('wallapaper.jpg');
 			margin: 0;
         }
 
